# divine_data_infra

./: .env.example  .gitignore  DATA.md  Dockerfile.backend  Makefile  docker-compose.backend.yml  manifest.json  manifest_cli.py  pyproject.toml
.github/workflows/: ci.yml
Analysis/: README.md  agentic_rag_roadmap.md  data_infrastructure.md
Analysis/golden/: hybrid_graph_queries.json
backend/: .env  __init__.py  pytest.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/docs/: asyncpg_cheatsheet.md  observability.md  personalization_signals.md
backend/etl/: __init__.py  neo4j_client.py  pg_client.py  requirements.txt  seed_graph.py
backend/tests/: README.md  TEST_SETUP_STATUS.md  __init__.py  conftest.py  test_assets.py  test_auth.py  test_batch.py  test_chunks.py  test_golden_retrieval.py  test_graph.py  test_health.py  test_memory.py  test_password_utils.py  test_profile_privacy.py  test_search.py  test_stats.py  test_validation.py  test_verses.py
backend/validation/: __init__.py  metrics.py  models.py  validators.py
docs/: cdc_debezium.md  roadmap.md
orchestration/: README.md  __init__.py  dagster.yaml  jobs.py  ops.py  resources.py  schedules.py  workspace.yaml
redis/: redis.conf
scripts/: evaluate_retrieval.py
scripts/db_extras_scripts/: embed_nasb_net.ps1  ingest_nasb_net.ps1
scripts/db_init/: 00_init.sql  00_init.v2.sql
scripts/py_scripts/: backend_builder.py  post_embed_checks.py
scripts/shell_scripts/: apply_indexes.sh  dev_up.sh  dev_up_v2.sh  full_pipeline.sh  ingest_all.sh  uv_setup.sh
(+60 files in other folders)
