[project]
name = "divinehaven-backend"
version = "0.1.0"
description = "Biblical text exploration platform with graph and vector search"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.118.2",
    "uvicorn[standard]==0.37.0",
    "SQLAlchemy>=2.0.43",
    "neo4j==6.0.2",
    "python-dotenv==1.1.1",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "orjson>=3.11.3",
    "graphiti-core[groq]>=0.21.0",
    "asyncpg==0.30.0",
    "typer>=0.19.2",
    "psycopg[binary]>=3.2.10",
    "aiohttp>=3.13.0",
    "redis[hiredis]==6.4.0",
    "httpx==0.28.1",
    "prometheus-client==0.23.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "dagster==1.7.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "orchestration"]

[tool.setuptools.package-data]
backend = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
